--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "typecheck": "tsc --noEmit -p tsconfig.json --pretty false",
     "lint": "eslint .",
     "preview": "vite preview"
   },
